crates/bc-cli/tests/cli/snapshots/cli__account__create_then_list.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 ID                                 | NAME    | TYPE  | KIND
=======================================================================
 [ACCOUNT_ID] | Savings | Asset | DepositAccount
----- stderr -----
