crates/bc-cli/tests/cli/snapshots/cli__account__create_then_list_shows_group_ancestors.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 ID                                 | NAME     | TYPE  | KIND           | OPENED | CLOSED
==========================================================================================
 [ACCOUNT_ID] | Assets   | Asset | Group          |        |
------------------------------------+----------+-------+----------------+--------+--------
 [ACCOUNT_ID] | BankA    | Asset | Group          |        |
------------------------------------+----------+-------+----------------+--------+--------
 [ACCOUNT_ID] | Checking | Asset | DepositAccount |        |
----- stderr -----
