crates/bc-cli/tests/cli/snapshots/cli__account__create_with_a_conflicting_kind_is_rejected.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid input: account 'Assets:BankA:Checking' already exists with kind DepositAccount (requested ManualAsset)
