crates/bc-cli/tests/cli/snapshots/cli__account__create_with_a_malformed_path_is_rejected.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid account path 'Assets::Checking': data error: malformed account path 'Assets::Checking': segments must be non-empty
