crates/bc-cli/tests/cli/snapshots/cli__account__create_with_an_underivable_root_and_explicit_type_succeeds.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Created account: Cash:Wallet ([ACCOUNT_ID])
  also created: Cash (Group)
----- stderr -----
