crates/bc-cli/tests/cli/snapshots/cli__account__create_with_an_underivable_root_reports_the_known_roots.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: cannot derive an account type from root segment 'Cash'; expected one of Assets, Liabilities, Equity, Income, Expenses; pass --type to set it explicitly
