crates/bc-cli/tests/cli/snapshots/cli__account__create_with_kind_group_shows_in_list.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 ID                                 | NAME        | TYPE    | KIND
====================================================================
 [ACCOUNT_ID] | Expenses    | Expense | Group
------------------------------------+-------------+---------+-------
 [ACCOUNT_ID] | Food        | Expense | Group
------------------------------------+-------------+---------+-------
 [ACCOUNT_ID] | Restaurants | Expense | Group
----- stderr -----
