crates/bc-cli/tests/cli/snapshots/cli__account__list_empty.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
No active accounts.
----- stderr -----
