crates/bc-cli/tests/cli/snapshots/cli__account__list_empty_json.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
[]
----- stderr -----
