crates/bc-cli/tests/cli/snapshots/cli__account__re_creating_the_same_path_is_a_no_op.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Account already exists: Assets:BankA:Checking ([ACCOUNT_ID])
----- stderr -----
